codegen/Wparser/workflowdsl_parser.go
// Code generated from ./codegen/grammar/W/WorkflowDSLParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package Wparser // WorkflowDSLParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type WorkflowDSLParser struct {
	*antlr.BaseParser
}

var WorkflowDSLParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func workflowdslparserParserInit() {
	staticData := &WorkflowDSLParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'workflow'", "'out'", "'models'", "'if'", "'else'", "'string'",
		"'int'", "'float'", "'auto'", "'struct'", "'{'", "'}'", "'['", "']'",
		"'('", "')'", "':'", "'<-'", "','", "'.'", "'/'", "'+'", "'-'", "'*'",
		"'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'$'", "'&'", "'|'", "'%'",
		"'@'", "'#'", "'^'", "'~'", "'&&'", "'||'", "'!'", "'sum'",
	}
	staticData.SymbolicNames = []string{
		"", "WORKFLOW", "OUT", "MODELS", "IF", "ELSE", "STRING_TYPE", "INT_TYPE",
		"FLOAT_TYPE", "AUTO", "STRUCT", "LBRACE", "RBRACE", "LBRACK", "RBRACK",
		"LPAREN", "RPAREN", "COLON", "ARROW", "COMMA", "DOT", "SLASH", "PLUS",
		"MINUS", "MULT", "EQ", "NEQ", "LT", "LTE", "GT", "GTE", "DOLLAR", "AMP",
		"PIPE", "PERCENT", "AT", "HASH", "CARET", "TILDE", "AND", "OR", "NOT",
		"SUM", "IN_ID", "IN_ID_ARRAY", "ID", "INT", "FLOAT", "STRING", "WS",
		"COMMENT",
	}
	staticData.RuleNames = []string{
		"workflow", "workflowBody", "inputs", "inputBlock", "fieldDef", "type",
		"outtype", "out", "expr", "atom", "functionCall", "conditionalExpr",
		"condition", "comparator", "arithmeticExpr", "parenExpr", "arithExprContent",
		"models", "modelEntry", "outField",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// WorkflowDSLParserInit initializes any static state used to implement WorkflowDSLParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewWorkflowDSLParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func WorkflowDSLParserInit() {
	staticData := &WorkflowDSLParserParserStaticData
	staticData.once.Do(workflowdslparserParserInit)
}

// NewWorkflowDSLParser produces a new parser instance for the optional input antlr.TokenStream.
func NewWorkflowDSLParser(input antlr.TokenStream) *WorkflowDSLParser {
	WorkflowDSLParserInit()
	this := new(WorkflowDSLParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &WorkflowDSLParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "WorkflowDSLParser.g4"

	return this
}

// WorkflowDSLParser tokens.
const (
	WorkflowDSLParserEOF         = antlr.TokenEOF
	WorkflowDSLParserWORKFLOW    = 1
	WorkflowDSLParserOUT         = 2
	WorkflowDSLParserMODELS      = 3
	WorkflowDSLParserIF          = 4
	WorkflowDSLParserELSE        = 5
	WorkflowDSLParserSTRING_TYPE = 6
	WorkflowDSLParserINT_TYPE    = 7
	WorkflowDSLParserFLOAT_TYPE  = 8
	WorkflowDSLParserAUTO        = 9
	WorkflowDSLParserSTRUCT      = 10
	WorkflowDSLParserLBRACE      = 11
	WorkflowDSLParserRBRACE      = 12
	WorkflowDSLParserLBRACK      = 13
	WorkflowDSLParserRBRACK      = 14
	WorkflowDSLParserLPAREN      = 15
	WorkflowDSLParserRPAREN      = 16
	WorkflowDSLParserCOLON       = 17
	WorkflowDSLParserARROW       = 18
	WorkflowDSLParserCOMMA       = 19
	WorkflowDSLParserDOT         = 20
	WorkflowDSLParserSLASH       = 21
	WorkflowDSLParserPLUS        = 22
	WorkflowDSLParserMINUS       = 23
	WorkflowDSLParserMULT        = 24
	WorkflowDSLParserEQ          = 25
	WorkflowDSLParserNEQ         = 26
	WorkflowDSLParserLT          = 27
	WorkflowDSLParserLTE         = 28
	WorkflowDSLParserGT          = 29
	WorkflowDSLParserGTE         = 30
	WorkflowDSLParserDOLLAR      = 31
	WorkflowDSLParserAMP         = 32
	WorkflowDSLParserPIPE        = 33
	WorkflowDSLParserPERCENT     = 34
	WorkflowDSLParserAT          = 35
	WorkflowDSLParserHASH        = 36
	WorkflowDSLParserCARET       = 37
	WorkflowDSLParserTILDE       = 38
	WorkflowDSLParserAND         = 39
	WorkflowDSLParserOR          = 40
	WorkflowDSLParserNOT         = 41
	WorkflowDSLParserSUM         = 42
	WorkflowDSLParserIN_ID       = 43
	WorkflowDSLParserIN_ID_ARRAY = 44
	WorkflowDSLParserID          = 45
	WorkflowDSLParserINT         = 46
	WorkflowDSLParserFLOAT       = 47
	WorkflowDSLParserSTRING      = 48
	WorkflowDSLParserWS          = 49
	WorkflowDSLParserCOMMENT     = 50
)

// WorkflowDSLParser rules.
const (
	WorkflowDSLParserRULE_workflow         = 0
	WorkflowDSLParserRULE_workflowBody     = 1
	WorkflowDSLParserRULE_inputs           = 2
	WorkflowDSLParserRULE_inputBlock       = 3
	WorkflowDSLParserRULE_fieldDef         = 4
	WorkflowDSLParserRULE_type             = 5
	WorkflowDSLParserRULE_outtype          = 6
	WorkflowDSLParserRULE_out              = 7
	WorkflowDSLParserRULE_expr             = 8
	WorkflowDSLParserRULE_atom             = 9
	WorkflowDSLParserRULE_functionCall     = 10
	WorkflowDSLParserRULE_conditionalExpr  = 11
	WorkflowDSLParserRULE_condition        = 12
	WorkflowDSLParserRULE_comparator       = 13
	WorkflowDSLParserRULE_arithmeticExpr   = 14
	WorkflowDSLParserRULE_parenExpr        = 15
	WorkflowDSLParserRULE_arithExprContent = 16
	WorkflowDSLParserRULE_models           = 17
	WorkflowDSLParserRULE_modelEntry       = 18
	WorkflowDSLParserRULE_outField         = 19
)

// IWorkflowContext is an interface to support dynamic dispatch.
type IWorkflowContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	WORKFLOW() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	WorkflowBody() IWorkflowBodyContext
	RBRACE() antlr.TerminalNode

	// IsWorkflowContext differentiates from other interfaces.
	IsWorkflowContext()
}

type WorkflowContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyWorkflowContext() *WorkflowContext {
	var p = new(WorkflowContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = WorkflowDSLParserRULE_workflow
	return p
}

func InitEmptyWorkflowContext(p *WorkflowContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = WorkflowDSLParserRULE_workflow
}

func (*WorkflowContext) IsWorkflowContext() {}

func NewWorkflowContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *WorkflowContext {
	var p = new(WorkflowContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = WorkflowDSLParserRULE_workflow

	return p
}

func (s *WorkflowContext) GetParser() antlr.Parser { return s.parser }

func (s *WorkflowContext) WORKFLOW() antlr.TerminalNode {
	return s.GetToken(WorkflowDSLParserWORKFLOW, 0)
}

func (s *WorkflowContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(WorkflowDSLParserLBRACE, 0)
}

func (s *WorkflowContext) WorkflowBody() IWorkflowBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IWorkflowBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IWorkflowBodyContext)
}

func (s *WorkflowContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(WorkflowDSLParserRBRACE, 0)
}

func (s *WorkflowContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *WorkflowContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *WorkflowContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(WorkflowDSLParserListener); ok {
		listenerT.EnterWorkflow(s)
	}
}

func (s *WorkflowContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(WorkflowDSLParserListener); ok {
		listenerT.ExitWorkflow(s)
	}
}

func (p *WorkflowDSLParser) Workflow() (localctx IWorkflowContext) {
	localctx = NewWorkflowContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, WorkflowDSLParserRULE_workflow)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(40)
		p.Match(WorkflowDSLParserWORKFLOW)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(41)
		p.Match(WorkflowDSLParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(42)
		p.WorkflowBody()
	}
	{
		p.SetState(43)
		p.Match(WorkflowDSLParserRBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IWorkflowBodyContext is an interface to support dynamic dispatch.
type IWorkflowBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Inputs() IInputsContext
	Out() IOutContext
	Models() IModelsContext

	// IsWorkflowBodyContext differentiates from other interfaces.
	IsWorkflowBodyContext()
}

type WorkflowBodyContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyWorkflowBodyContext() *WorkflowBodyContext {
	var p = new(WorkflowBodyContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = WorkflowDSLParserRULE_workflowBody
	return p
}

func InitEmptyWorkflowBodyContext(p *WorkflowBodyContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = WorkflowDSLParserRULE_workflowBody
}

func (*WorkflowBodyContext) IsWorkflowBodyContext() {}

func NewWorkflowBodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *WorkflowBodyContext {
	var p = new(WorkflowBodyContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = WorkflowDSLParserRULE_workflowBody

	return p
}

func (s *WorkflowBodyContext) GetParser() antlr.Parser { return s.parser }

func (s *WorkflowBodyContext) Inputs() IInputsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInputsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInputsContext)
}

func (s *WorkflowBodyContext) Out() IOutContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOutContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOutContext)
}

func (s *WorkflowBodyContext) Models() IModelsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IModelsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IModelsContext)
}

func (s *WorkflowBodyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *WorkflowBodyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *WorkflowBodyContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(WorkflowDSLParserListener); ok {
		listenerT.EnterWorkflowBody(s)
	}
}

func (s *WorkflowBodyContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(WorkflowDSLParserListener); ok {
		listenerT.ExitWorkflowBody(s)
	}
}

func (p *WorkflowDSLParser) WorkflowBody() (localctx IWorkflowBodyContext) {
	localctx = NewWorkflowBodyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, WorkflowDSLParserRULE_workflowBody)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(45)
		p.Inputs()
	}
	{
		p.SetState(46)
		p.Out()
	}
	{
		p.SetState(47)
		p.Models()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IInputsContext is an interface to support dynamic dispatch.
type IInputsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllInputBlock() []IInputBlockContext
	InputBlock(i int) IInputBlockContext

	// IsInputsContext differentiates from other interfaces.
	IsInputsContext()
}

type InputsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInputsContext() *InputsContext {
	var p = new(InputsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = WorkflowDSLParserRULE_inputs
	return p
}

func InitEmptyInputsContext(p *InputsContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = WorkflowDSLParserRULE_inputs
}

func (*InputsContext) IsInputsContext() {}

func NewInputsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InputsContext {
	var p = new(InputsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = WorkflowDSLParserRULE_inputs

	return p
}

func (s *InputsContext) GetParser() antlr.Parser { return s.parser }

func (s *InputsContext) AllInputBlock() []IInputBlockContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IInputBlockContext); ok {
			len++
		}
	}

	tst := make([]IInputBlockContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IInputBlockContext); ok {
			tst[i] = t.(IInputBlockContext)
			i++
		}
	}

	return tst
}

func (s *InputsContext) InputBlock(i int) IInputBlockContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInputBlockContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInputBlockContext)
}

func (s *InputsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InputsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *InputsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(WorkflowDSLParserListener); ok {
		listenerT.EnterInputs(s)
	}
}

func (s *InputsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(WorkflowDSLParserListener); ok {
		listenerT.ExitInputs(s)
	}
}

func (p *WorkflowDSLParser) Inputs() (localctx IInputsContext) {
	localctx = NewInputsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, WorkflowDSLParserRULE_inputs)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(50)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == WorkflowDSLParserIN_ID || _la == WorkflowDSLParserIN_ID_ARRAY {
		{
			p.SetState(49)
			p.InputBlock()
		}

		p.SetState(52)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IInputBlockContext is an interface to support dynamic dispatch.
type IInputBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	LBRACE() antlr.TerminalNode
	RBRACE() antlr.TerminalNode
	IN_ID() antlr.TerminalNode
	IN_ID_ARRAY() antlr.TerminalNode
	AllFieldDef() []IFieldDefContext
	FieldDef(i int) IFieldDefContext

	// IsInputBlockContext differentiates from other interfaces.
	IsInputBlockContext()
}

type InputBlockContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInputBlockContext() *InputBlockContext {
	var p = new(InputBlockContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = WorkflowDSLParserRULE_inputBlock
	return p
}

func InitEmptyInputBlockContext(p *InputBlockContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = WorkflowDSLParserRULE_inputBlock
}

func (*InputBlockContext) IsInputBlockContext() {}

func NewInputBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InputBlockContext {
	var p = new(InputBlockContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = WorkflowDSLParserRULE_inputBlock

	return p
}

func (s *InputBlockContext) GetParser() antlr.Parser { return s.parser }

func (s *InputBlockContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(WorkflowDSLParserLBRACE, 0)
}

func (s *InputBlockContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(WorkflowDSLParserRBRACE, 0)
}

func (s *InputBlockContext) IN_ID() antlr.TerminalNode {
	return s.GetToken(WorkflowDSLParserIN_ID, 0)
}

func (s *InputBlockContext) IN_ID_ARRAY() antlr.TerminalNode {
	return s.GetToken(WorkflowDSLParserIN_ID_ARRAY, 0)
}

func (s *InputBlockContext) AllFieldDef() []IFieldDefContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFieldDefContext); ok {
			len++
		}
	}

	tst := make([]IFieldDefContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFieldDefContext); ok {
			tst[i] = t.(IFieldDefContext)
			i++
		}
	}

	return tst
}

func (s *InputBlockContext) FieldDef(i int) IFieldDefContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldDefContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldDefContext)
}

func (s *InputBlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InputBlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *InputBlockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(WorkflowDSLParserListener); ok {
		listenerT.EnterInputBlock(s)
	}
}

func (s *InputBlockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(WorkflowDSLParserListener); ok {
		listenerT.ExitInputBlock(s)
	}
}

func (p *WorkflowDSLParser) InputBlock() (localctx IInputBlockContext) {
	localctx = NewInputBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, WorkflowDSLParserRULE_inputBlock)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(54)
		_la = p.GetTokenStream().LA(1)

		if !(_la == WorkflowDSLParserIN_ID || _la == WorkflowDSLParserIN_ID_ARRAY) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}
	{
		p.SetState(55)
		p.Match(WorkflowDSLParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == WorkflowDSLParserID {
		{
			p.SetState(56)
			p.FieldDef()
		}

		p.SetState(61)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(62)
		p.Match(WorkflowDSLParserRBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFieldDefContext is an interface to support dynamic dispatch.
type IFieldDefContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ID() antlr.TerminalNode
	COLON() antlr.TerminalNode
	Type_() ITypeContext

	// IsFieldDefContext differentiates from other interfaces.
	IsFieldDefContext()
}

type FieldDefContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFieldDefContext() *FieldDefContext {
	var p = new(FieldDefContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = WorkflowDSLParserRULE_fieldDef
	return p
}

func InitEmptyFieldDefContext(p *FieldDefContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = WorkflowDSLParserRULE_fieldDef
}

func (*FieldDefContext) IsFieldDefContext() {}

func NewFieldDefContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FieldDefContext {
	var p = new(FieldDefContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = WorkflowDSLParserRULE_fieldDef

	return p
}

func (s *FieldDefContext) GetParser() antlr.Parser { return s.parser }

func (s *FieldDefContext) ID() antlr.TerminalNode {
	return s.GetToken(WorkflowDSLParserID, 0)
}

func (s *FieldDefContext) COLON() antlr.TerminalNode {
	return s.GetToken(WorkflowDSLParserCOLON, 0)
}

func (s *FieldDefContext) Type_() ITypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeContext)
}

func (s *FieldDefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldDefContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FieldDefContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(WorkflowDSLParserListener); ok {
		listenerT.EnterFieldDef(s)
	}
}

func (s *FieldDefContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(WorkflowDSLParserListener); ok {
		listenerT.ExitFieldDef(s)
	}
}

func (p *WorkflowDSLParser) FieldDef() (localctx IFieldDefContext) {
	localctx = NewFieldDefContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, WorkflowDSLParserRULE_fieldDef)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(64)
		p.Match(WorkflowDSLParserID)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(65)
		p.Match(WorkflowDSLParserCOLON)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(67)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&9664) != 0 {
		{
			p.SetState(66)
			p.Type_()
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITypeContext is an interface to support dynamic dispatch.
type ITypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	INT_TYPE() antlr.TerminalNode
	FLOAT_TYPE() antlr.TerminalNode
	STRING_TYPE() antlr.TerminalNode
	STRUCT() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	RBRACE() antlr.TerminalNode
	AllFieldDef() []IFieldDefContext
	FieldDef(i int) IFieldDefContext
	LBRACK() antlr.TerminalNode
	RBRACK() antlr.TerminalNode
	Type_() ITypeContext

	// IsTypeContext differentiates from other interfaces.
	IsTypeContext()
}

type TypeContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTypeContext() *TypeContext {
	var p = new(TypeContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = WorkflowDSLParserRULE_type
	return p
}

func InitEmptyTypeContext(p *TypeContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = WorkflowDSLParserRULE_type
}

func (*TypeContext) IsTypeContext() {}

func NewTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypeContext {
	var p = new(TypeContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = WorkflowDSLParserRULE_type

	return p
}

func (s *TypeContext) GetParser() antlr.Parser { return s.parser }

func (s *TypeContext) INT_TYPE() antlr.TerminalNode {
	return s.GetToken(WorkflowDSLParserINT_TYPE, 0)
}

func (s *TypeContext) FLOAT_TYPE() antlr.TerminalNode {
	return s.GetToken(WorkflowDSLParserFLOAT_TYPE, 0)
}
